add links and basic styles

--- a/css/app.css
+++ b/css/app.css
@@ -1,22 +1,29 @@
 :root {
+  font-family: "Roboto", sans-serif;
+  --text-paragrap: #030303;
+  --connect-btn: #065fd4;
+  --logo-bg: #ff0000;
+  --filter-bg-1: rgba(0, 0, 0, 0.1);
+  --filter-bg-2: rgba(0, 0, 0, 0.5);
+  --filter-bg-3: #333333;
 }
 
-//----------------------------------------------------------------
-//            UTILY CLASS
-//----------------------------------------------------------------
+//*----------------------------------------------------------------*/
+//*            UTILY CLASS                                         */
+//*----------------------------------------------------------------*/
 
-//----------------------------------------------------------------
-//            NAVBAR CLASS
-//----------------------------------------------------------------
+//*----------------------------------------------------------------*/
+//*            NAVBAR CLASS                                        */
+//*----------------------------------------------------------------*/
 
-//----------------------------------------------------------------
-//            SIDEBAR CLASS
-//----------------------------------------------------------------
+//*----------------------------------------------------------------*/
+//*            SIDEBAR CLASS                                       */
+//*----------------------------------------------------------------*/
 
-//----------------------------------------------------------------
-//            CONTENT CLASS
-//----------------------------------------------------------------
+//*----------------------------------------------------------------*/
+//*            CONTENT CLASS                                       */
+//*----------------------------------------------------------------*/
 
-//----------------------------------------------------------------
-//            FORM CLASS
-//----------------------------------------------------------------
+//*----------------------------------------------------------------*/
+//*            UTILY CLASS                                         */
+//*----------------------------------------------------------------*/
