--- a/css/app.css
+++ b/css/app.css
@@ -1,29 +1,102 @@
 :root {
   font-family: "Roboto", sans-serif;
   --text-paragrap: #030303;
+  --text-paragrap-2: #606060;
   --connect-btn: #065fd4;
   --logo-bg: #ff0000;
-  --filter-bg-1: rgba(0, 0, 0, 0.1);
-  --filter-bg-2: rgba(0, 0, 0, 0.5);
+  --filter-bg-1: #0000001a;
+  --filter-bg-2: #0f0e0e0d;
   --filter-bg-3: #333333;
 }
 
-//*----------------------------------------------------------------*/
-//*            UTILY CLASS                                         */
-//*----------------------------------------------------------------*/
+/*----------------------------------------------------------------*/
+/*            UTILY CLASS                                         */
+/*----------------------------------------------------------------*/
 
-//*----------------------------------------------------------------*/
-//*            NAVBAR CLASS                                        */
-//*----------------------------------------------------------------*/
+/*----------------------------------------------------------------*/
+/*            NAVBAR CLASS                                        */
+/*----------------------------------------------------------------*/
 
-//*----------------------------------------------------------------*/
-//*            SIDEBAR CLASS                                       */
-//*----------------------------------------------------------------*/
+/*----------------------------------------------------------------*/
+/*            SIDEBAR CLASS                                       */
+/*----------------------------------------------------------------*/
 
-//*----------------------------------------------------------------*/
-//*            CONTENT CLASS                                       */
-//*----------------------------------------------------------------*/
+.videoPreview__container{
+  margin: 10px;
+  display: flex;
+  flex-direction: column;
+  flex-wrap: wrap;
+}
+.filter{
+  margin-left:  25px;
+  display: flex;
+  flex-direction: row;
+}
 
-//*----------------------------------------------------------------*/
-//*            UTILY CLASS                                         */
-//*----------------------------------------------------------------*/
+.filter button{
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+    align-items: center;
+    padding: 0px 5px;
+    margin-right: 12px;
+    color: var(--filter-bg-3);
+    border: solid var(--filter-bg-1) 1px;
+    background-color: var(--filter-bg-2);
+    border-radius: 100px;
+    box-sizing: border-box;
+  }
+
+.card__container{
+  margin: 10px;
+  display: flex;
+  flex-direction: row;
+  flex-wrap: wrap;
+}
+.card{
+  margin-left:  15px;
+  margin-bottom: 15px;
+  width: 276px;
+  display: flex;
+  flex-direction: column;
+}
+
+.card__body {
+  display: flex;
+  flex-direction: row;
+  align-items: flex-start;
+  padding: 0px;
+  margin-top: 12px;
+}
+.card__avatar{
+  margin-right: 12px;
+}
+.card__text{
+  display: flex;
+  flex-direction: column;
+}
+
+.card__name{
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+}
+
+.card__name img {
+  margin-left: 10px;
+  margin-top: 7px;
+}
+
+.card__text h3 {
+  font-size: 16px;
+  margin: 0px;
+}
+.card__text span {
+  color: var(--text-paragrap-2);
+  margin-top: 5px;
+  font-size: 14px;
+}
+
+/*----------------------------------------------------------------*/
+/*            UTILY CLASS                                         */
+/*----------------------------------------------------------------*/
