--- a/css/app.css
+++ b/css/app.css
@@ -7,6 +7,7 @@
   --filter-bg-1: #0000001a;
   --filter-bg-2: #0f0e0e0d;
   --filter-bg-3: #333333;
+  --header-height: 60px;
 }
 
 /*----------------------------------------------------------------*/
@@ -16,38 +17,43 @@
   position: relative;
 }
 
-.flex{
+.flex {
   display: flex;
 }
 
-.shrink-0{
+.shrink-0 {
   flex-shrink: 0;
 }
 
-.flex-grow{
+.flex-grow {
   flex-grow: 1;
 }
 
-.h-full{
+.h-full {
   height: 100%;
 }
 
-.max-h-screen{
+.max-h-screen {
   max-height: 100vh;
   overflow-y: scroll;
 }
 
-.w-240{
+.w-240 {
   width: 240px;
+}
+
+.main-height {
+  height: calc(100vh - var(--header-height));
+  overflow-y: auto;
 }
 
 /*----------------------------------------------------------------*/
 /*            NAVBAR CLASS                                        */
 /*----------------------------------------------------------------*/
-.header{
-  height: 56px;
-  background-color: #FFFFFF
-}  
+.header {
+  height: var(--header-height);
+  background-color: #ffffff;
+}
 
 .header__container {
   display: flex;
@@ -60,43 +66,42 @@
   left: 0px;
   right: 0px;
   top: 0px;
-  background-color: #FFFFFF
+  background-color: #ffffff;
 }
 
-.header__group{
+.header__group {
   display: flex;
   align-items: center;
   flex: none;
   order: 0;
   flex-grow: 0;
   gap: 24px;
-  
 }
 
-.group__brand{
+.group__brand {
   display: flex;
   align-items: center;
   height: 20px;
 }
 
-.brand__icon{
+.brand__icon {
   display: block;
   height: 100%;
-  transform: scale(1.5,1.5);
+  transform: scale(1.5, 1.5);
   margin-right: 5px;
 }
 
-.brand__letter{
+.brand__letter {
   display: block;
   height: 100%;
 }
 
-.group__hamburger{
+.group__hamburger {
   width: 24px;
   height: 24px;
 }
 
-.hamburger__group{
+.hamburger__group {
   display: flex;
   width: 24px;
   height: 24px;
@@ -105,7 +110,7 @@
   justify-content: center;
 }
 
-.header__search{
+.header__search {
   display: flex;
   width: 685px;
   height: 40px;
@@ -116,35 +121,34 @@
   margin: 0px 134px;
 }
 
-.search__input{
-  
+.search__input {
   width: 572px;
   height: 40px;
-  background: #FFFFFF;
-  border: 1px solid #CCCCCC;
+  background: #ffffff;
+  border: 1px solid #cccccc;
   box-sizing: border-box;
-  box-shadow: inset 0px 1px 2px #EEEEEE;
+  box-shadow: inset 0px 1px 2px #eeeeee;
 }
 
-.search__button{
+.search__button {
   display: flex;
   width: 64px;
   height: 40px;
-  background: #F0F0F0;
-  border: 1px solid #C6C6C6;
+  background: #f0f0f0;
+  border: 1px solid #c6c6c6;
   justify-content: center;
   align-items: center;
 }
 
-.search__voice{
+.search__voice {
   width: 40px;
   height: 40px;
-  background: #F9F9F9;
+  background: #f9f9f9;
   border-radius: 100%;
-  border: #F9F9F9;
+  border: #f9f9f9;
 }
 
-.header__user{
+.header__user {
   display: flex;
   flex-direction: row;
   justify-content: flex-end;
@@ -160,7 +164,7 @@
   margin: 0px 134px;
 }
 
-.user__apps{
+.user__apps {
   width: 24px;
   height: 24px;
   top: 8px;
@@ -170,47 +174,48 @@
   margin: 0px 16px;
 }
 
-.apps__button{
+.apps__button {
   display: flex;
   width: 24px;
   height: 24px;
-  background-color: #FFFFFF;
+  background-color: #ffffff;
   border: none;
   align-items: center;
 }
 
-.user__options{
+.user__options {
   display: flex;
   width: 24px;
   height: 24px;
   margin: 0px 16px;
-  
 }
 
-.options__button{
+.options__button {
   display: flex;
   width: 24px;
   height: 24px;
   justify-content: center;
   align-items: center;
-  background-color: #FFFFFF;
+  background-color: #ffffff;
   border: none;
 }
 
-.connection-btn{
+.connection-btn {
   display: flex;
   justify-content: center;
   align-items: center;
-  padding: 8px 11px;
+  flex-grow: 1;
   height: 40px;
-  border: 1px solid #065FD4;
-  border-radius: 2px;
+  padding: 8px 11px;
   margin: 0px 10px;
-  color: #065FD4;
-  background-color: #FFFFFF;
+  border: 1px solid #065fd4;
+  border-radius: 2px;
+  color: #065fd4;
+  background-color: #ffffff;
+  text-decoration: none;
 }
 
-.connection-btn__icon{
+.connection-btn__icon {
   display: flex;
   justify-content: center;
   align-items: center;
@@ -219,7 +224,7 @@
   margin-right: 11px;
 }
 
-.connection-btn__content{
+.connection-btn__content {
   font-weight: 500px;
   font-size: 14px;
   line-height: 16px;
@@ -239,12 +244,12 @@
   width: 240px;
 }
 
-.sidebar__section{
+.sidebar__section {
   width: 100%;
   overflow: hidden;
 }
 
-.sidebar__section__title{
+.sidebar__section__title {
   padding: 8px 24px;
   margin: 0;
   color: var(--text-paragrap-2);
@@ -255,7 +260,7 @@
   text-transform: uppercase;
 }
 
-.sidebar__section__description{
+.sidebar__section__description {
   padding: 8px 24px;
   margin: 0;
   color: #000;
@@ -264,34 +269,33 @@
   line-height: 20px;
 }
 
-.sidebar__divider{
-  width: 100%;
+.sidebar__divider {
   border-style: solid;
   border-width: 1px;
   border-color: rgba(0, 0, 0, 0.1);
   margin: 8px 0;
 }
 
-.sidebar__tab{
+.sidebar__tab {
   width: 100%;
   overflow: hidden;
   transition-property: background-color;
   transition-duration: 200ms;
 }
 
-.sidebar__tab.active{
-  background-color: #E6E6E6;
+.sidebar__tab.active {
+  background-color: #e6e6e6;
 }
 
-.sidebar__tab:hover{
-  background-color: #F2F2F2;
+.sidebar__tab:hover {
+  background-color: #f2f2f2;
 }
 
-.sidebar__tab.active:hover{
-  background-color: #D6D6D6;
+.sidebar__tab.active:hover {
+  background-color: #d6d6d6;
 }
 
-.sidebar__tab__link{
+.sidebar__tab__link {
   display: flex;
   flex-wrap: nowrap;
   gap: 24px;
@@ -301,7 +305,7 @@
   overflow: hidden;
 }
 
-.sidebar__tab__icon{
+.sidebar__tab__icon {
   display: flex;
   align-items: center;
   justify-content: center;
@@ -311,20 +315,20 @@
   color: #000;
 }
 
-.sidebar__tab__icon--rounded-full{
+.sidebar__tab__icon--rounded-full {
   border-radius: 100%;
   overflow: hidden;
   flex-shrink: 0;
 }
 
-.sidebar__tab__img{
+.sidebar__tab__img {
   display: block;
   width: 100%;
   height: 100%;
   object-fit: contain;
 }
 
-.sidebar__tab__name{
+.sidebar__tab__name {
   font-size: 14px;
   line-height: 1.17;
   font-weight: 500;
@@ -334,16 +338,16 @@
   white-space: nowrap;
 }
 
-.sidebar__actions{
-  width: 100%;
+.sidebar__actions {
+  display: flex;
   padding: 8px 24px;
 }
 
-.sidebar__section__links{
+.sidebar__section__links {
   padding: 8px 24px;
 }
 
-.sidebar__link{
+.sidebar__link {
   font-weight: 500;
   font-size: 13px;
   line-height: 18px;
@@ -351,7 +355,7 @@
   color: var(--text-paragrap-2);
 }
 
-.sidebar__footer{
+.sidebar__footer {
   margin: 10px 0;
   font-weight: 400;
   font-size: 12px;
